fix(action bar) review comments on alignments and truncation and responsiveness given by Inna

--- a/src/action-bar.scss
+++ b/src/action-bar.scss
@@ -31,6 +31,22 @@ $block: #{$fd-namespace}-action-bar;
     vertical-align: middle;
   }
 
+  @mixin fd-action-bar-description {
+    @include fd-reset();
+
+    color: var(--sapContent_LabelColor);
+
+    @include fd-hide-on-mobile();
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-top: 0.25rem;
+    height: 1.25rem;
+    width: 100%;
+    vertical-align: middle;
+  }
+
   @mixin fd-hide-on-mobile {
     // Changed from deprecated fd-screen(xs)
     @include fd-screen(s) {
@@ -57,9 +73,6 @@ $block: #{$fd-namespace}-action-bar;
   @include responsive-action-bar($padding-x: 2rem);
 
   &__header {
-    flex-grow: 1;
-    width: 75%;
-
     @include fd-reset();
 
     min-height: 2rem;
@@ -91,14 +104,14 @@ $block: #{$fd-namespace}-action-bar;
     @include fd-heading();
     @include fd-truncate-text();
 
+    overflow: hidden;
+    text-overflow: ellipsis;
     font-size: var(--sapFontHeader3Size);
     font-family: var(--sapFontHeaderFamily);
     color: $fd-action-bar-title-color;
     flex-grow: 1;
     padding-right: 0.5rem;
     vertical-align: middle;
-    overflow: hidden;
-    text-overflow: ellipsis;
     margin: 0;
   }
 
